correct error in riff-raff.yaml file

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -1,7 +1,7 @@
 stacks: [playground]
 regions: [eu-west-1]
 templates:
-  <name of project>:
+  tsilver-gateway-workshop:
     type: aws-lambda
     app: tsilver-gateway-workshop
     contentDirectory:   tsilver-gateway-workshop
