change name of project to camel case in cfn.yaml

--- a/cfn.yaml
+++ b/cfn.yaml
@@ -67,7 +67,7 @@ Resources:
           Stack: !Ref Stack
           App: !Ref App
       Description: Test lambda for workshop
-      Handler: com.gu.<name of project in camel case>.Lambda::handler
+      Handler: com.gu.tsilverGatewayWorkshop.Lambda::handler
       MemorySize: 512
       Role: !GetAtt ExecutionRole.Arn
       Runtime: java8
